<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".RegistrationLocationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hey_plese_select_your_location"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="#FFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/circular_corner_button"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="15dp"
        android:layout_margin="35dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/confirm_your_location_you_can_also_add_your_location_by_tapping_on_the_map_icon"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/location"/>

        <TextView
            android:id="@+id/tv_reg_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trying_to_get_your_current_location_tap_on_refresh_button_to_get_your_current_location"
            android:layout_marginTop="30dp"
            android:textColor="#222"
            android:gravity="center"
            android:textSize="18sp"/>

        <!--<ImageView-->
            <!--android:id="@+id/img_view_refresh_location"-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:src="@drawable/ic_action_refresh"/>-->


        <Button
            android:id="@+id/btn_reg_location_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/curved_rectangular_red_border"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:text="@string/next"/>

    </LinearLayout>

</LinearLayout>