<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44336"
    tools:context=".RegistrationNameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="80dp"
        android:layout_gravity="center">

        <FrameLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/reg_profile_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFF"
                android:src="@drawable/profile_pic_default"/>

            <ImageView
                android:id="@+id/reg_add_profile_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="6dp"
                android:background="@drawable/circular_filled_shape"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_camera_white"/>

        </FrameLayout>



        <EditText
            android:id="@+id/reg_ed_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:background="#00000000"
            android:textSize="22sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:inputType="textPersonName"
            android:hint="@string/enter_your_name"
            android:gravity="center"
            android:layout_weight="8" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="30dp"
            android:background="#FFF"
            android:layout_marginRight="30dp"/>
        <EditText
            android:id="@+id/reg_ed_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:background="#00000000"
            android:textSize="22sp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:hint="@string/birthday_dd_mm_yyyy"
            android:focusable="false"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="30dp"
            android:background="#FFF"
            android:layout_marginRight="30dp"/>

            <Button
                android:id="@+id/btn_reg_name_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColor="#F44336"
                android:layout_marginTop="40dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingLeft="60dp"
                android:textSize="18sp"
                android:background="@drawable/circular_corner_button"
                android:paddingRight="60dp"
                android:layout_gravity="center"/>
        </LinearLayout>



</FrameLayout>